--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
-spring.datasource.url=jdbc:sqlserver://localhost:55757;databaseName=portfolio 
+spring.datasource.url=${DB_URL: jdbc:sqlserver://localhost:51867;databaseName=portfolio} 
 spring.datasource.username=PDA1
 spring.datasource.password=root
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
+
+server.port= 9090
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
