--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.hibernate.ddl-auto = update
 server.port= 9090
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+app.user=admin
+app.password=System@123
