added jwt maintainance code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 app.user=admin
 app.password=System@123
+app.jwt.secret="secretkey";
