--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,9 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 app.user=admin
 app.password=System@123
 app.jwt.secret="secretkey";
+app.upload.path=E:/tutorials
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=15MB
+
